--- a/cruddemo/src/main/resources/application.properties
+++ b/cruddemo/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+
+spring.jpa.hibernate.ddl-auto=create
+
+spring.main.banner-mode=off
+
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
